--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="lineare-algebra-i-big-picture.html">Link</a>
+    <a href="Lineare Algebra I - Big Picture.html">Link</a>
 </body>
 </html>
