Zweite Version hinzugefügt

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Lineare Algebra I - Big Picture.html">Link</a>
+    <a href="Lineare Algebra I - Big Picture.html">Link alt </a><br>
+    <a href="lineare_algebra_I.html">Link neu</a>
 </body>
 </html>
